# halo2wrong2

./: .gitignore  Cargo.toml
circuitry/: Cargo.toml
circuitry/src/: enforcement.rs  lib.rs  stack.rs  tests.rs  utils.rs  witness.rs
circuitry/src/chip/: first_degree.rs  mod.rs  range.rs  second_degree.rs  select.rs
circuitry/src/gates/: crt256.rs  mod.rs  range.rs  rom.rs  select.rs  vanilla.rs  var_vanilla.rs  vertical.rs
circuitry/src/gates/range/: in_place.rs  in_place_sparse.rs  mod.rs
circuitry/src/test/: mod.rs  rom.rs  vanilla.rs  vertical.rs
ecc/: Cargo.toml
ecc/src/: base_field_ecc.rs  lib.rs  tests.rs  utils.rs
ecc/src/base_field_ecc/: mod.rs  mul_fix.rs  mul_var.rs  test.rs
ecc/src/general_ecc/: ecdsa.rs  mod.rs  mul_fix.rs  mul_var.rs  test.rs
integer/: Cargo.toml
integer/src/: gate.rs  integer.rs  lib.rs  rns.rs  stack.rs  tests.rs
integer/src/chip/: add.rs  assert_not_zero.rs  assign.rs  mod.rs  mul.rs  reduce.rs
pairing/: Cargo.toml
pairing/src/: fp12.rs  fp2.rs  fp6.rs  lib.rs  test.rs
src/: lib.rs  utils.rs
src/circuitry/: enforcement.rs  mod.rs  stack.rs  witness.rs
src/circuitry/chip/: first_degree.rs  mod.rs  range.rs  second_degree.rs  select.rs
src/circuitry/gates/: mod.rs  range.rs  rom.rs  select.rs  vanilla.rs  var_vanilla.rs  vertical.rs
src/circuitry/test/: mod.rs  rom.rs  vanilla.rs  vertical.rs
src/ecc/: mod.rs
src/ecc/base_field_ecc/: mod.rs  mul_fix.rs  mul_var.rs  test.rs
src/ecc/general_ecc/: ecdsa.rs  mod.rs  mul_fix.rs  mul_var.rs  test.rs
src/ecc/pairing/: fq12.rs  fq2.rs  fq6.rs  mod.rs  test.rs  witness.rs
src/ecc/pairing/bls/: fq12.rs  fq2.rs  fq6.rs  mod.rs  test.rs  witness.rs
src/ecc/pairing/bn/: fq12.rs  fq2.rs  fq6.rs  mod.rs  test.rs  witness.rs
src/integer/: mod.rs  rns.rs  tests.rs
src/integer/chip/: add.rs  assign.rs  mod.rs  mul.rs  reduce.rs
src/transcript/: mod.rs  permutation.rs
transcript/: Cargo.toml
transcript/src/: lib.rs  permutation.rs  transcript.rs
