[package]
authors = ["kilic <kiliconu@itu.edu.tr>"]
edition = "2021"
name = "circuitry"
version = "0.2.0"

[dependencies]
num-bigint = {version = "0.4", features = ["rand"]}
num-integer = "0.1"
num-traits = "0.2"
# halo2 = { package = "halo2_proofs", git = "https://github.com/privacy-scaling-explorations/halo2", features = ["circuit-params"] }
# halo2_axiom = {package = "halo2_proofs", path = "../../../axiom-crypto/halo2/halo2_proofs", }
halo2 = {package = "halo2_proofs", path = "../../../privacy-scaling-explorations/halo2/halo2_proofs", features = ["circuit-params"]}

ark-std = {version = "^0.4.0", features = ["print-trace"]}

ff = {package = "ff", version = "0.13.0"}
group = {package = "group", version = "0.13.0"}

subtle = {version = "2.3", default-features = false}

[dev-dependencies]
rand = "0.8"
rand_core = {version = "0.6", default-features = false}
rand_xorshift = "0.3"

[features]
default = ["info", "prover-sanity", "synth-sanity"]

info = []
prover-sanity = []
synth-sanity = []
