[package]
authors = ["kilic <kiliconu@itu.edu.tr>"]
edition = "2021"
name = "transcript"
version = "0.2.0"

[dependencies]
circuitry = {path = "../circuitry"}
ecc = {path = "../ecc"}
integer = {path = "../integer"}
halo2 = { package = "halo2_proofs", git = "https://github.com/privacy-scaling-explorations/halo2", features = ["circuit-params"] }
# halo2 = {package = "halo2_proofs", path = "../../../privacy-scaling-explorations/halo2/halo2_proofs", features = ["circuit-params"]}
poseidon = {git = "https://github.com/privacy-scaling-explorations/poseidon.git", tag = "v2023_04_20"}
subtle = {version = "2.3", default-features = false}

[dev-dependencies]
paste = "^1.0.11"
rand = "0.8"
rand_core = {version = "0.6", default-features = false}

[features]
default = []
